# H-JEPA-LM

./: .gitignore  EXPERIMENTS.md  MEMORY.md  PLAN.md  README.md  TARGET.md  benchmark_hjepa.py  demo.ipynb  hjepa_model.py  pyproject.toml  test_model.py  train.py
.github/workflows/: ci.yml
benchmarks/: generate_charts.py
jepalm/: __init__.py  baseline.py  cli.py  config.py  dataset.py  decoder.py  encoder.py  eval.py  hjepa.py  loss.py  masking.py  model.py  predictor.py  target_encoder.py  train.py
tests/: test_core.py
